tests/NormalTests/paczka1/fuzzy1/44252111.err
Error in line 13: puThdLo3IkR A958 32,5
Error in line 39: A958 A958 6,2
